--- a/sass/_activities.sass
+++ b/sass/_activities.sass
@@ -99,7 +99,7 @@
 						color: #aaa 
 						border-color: #aaa 
 			&.a__date
-				width: 190px 
+				width: 130px 
 				font-size: 16px 
 				.date
 					display: inline-block
@@ -120,6 +120,15 @@
 			&.a__title
 				width: 380px 
 				font-size: 16px 
+				width: 260px 
+				width: 220px 
+				div
+					width: 180px
+					overflow: hidden 
+					white-space: nowrap
+					overflow: hidden
+					-ms-text-overflow: ellipsis
+					text-overflow: ellipsis
 				strong
 					+asemi
 					font-weight: normal
